[package]
name = "pertable"
version = "0.1.0"
edition = "2021"
authors = ["Sam Mun <ozonefreak2@gmail.com>"]
description = "Periodic table in rust"
repository = "https://github.com/TheRealSalmon/pertable"
license = "MIT"
keywords = ["chemistry"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
